<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cambiouser">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="91dp"
            android:text="@string/Cuser"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextPassword4"
            android:layout_width="253dp"
            android:layout_height="43dp"
            android:layout_marginTop="116dp"
            android:ems="10"
            android:hint="@string/passN"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword3"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3" />

        <EditText
            android:id="@+id/editTextTextPassword5"
            android:layout_width="253dp"
            android:layout_height="40dp"
            android:layout_marginTop="116dp"
            android:ems="10"
            android:hint="@string/passNC"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword4"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword4" />

        <EditText
            android:id="@+id/editTextTextPassword3"
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_marginBottom="567dp"
            android:ems="10"
            android:hint="@string/passAc"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:text="@string/aceptar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>