<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_0da20290ab6baa9b1c010ec35565f12"
    tools:context=".Cambiocaja">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo_amarillo">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="356dp"
            android:layout_height="1201dp"
            android:src="@drawable/fondo_amarillo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="-235dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="98dp"
            android:text="@string/Ccaja"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextPassword7"
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_marginBottom="415dp"
            android:ems="10"
            android:hint="@string/passN"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/gris"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword6" />

        <EditText
            android:id="@+id/editTextTextPassword8"
            android:layout_width="250dp"
            android:layout_height="42dp"
            android:layout_marginTop="116dp"
            android:ems="10"
            android:hint="@string/passNC"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/gris"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword7"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword7" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:text="@string/aceptar"
            android:textColorLink="@color/yellow_300"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword8" />

        <EditText
            android:id="@+id/editTextTextPassword6"
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_marginBottom="104dp"
            android:ems="10"
            android:hint="@string/passAc"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/gris"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>